# win-example-rs

./: Cargo.toml
device-info/: Cargo.toml
device-info/src/: main.rs
fileversion/: Cargo.toml
fileversion/cxx/: CMakeLists.txt  fileversion.cc
